...
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/group_assistant">
        <menu>
            <item
                android:id="@+id/nav_assistant"
                android:icon="@drawable/ic_baseline_assistant_24"
                android:title="@string/menu_assistant" />
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_baseline_notifications_24"
                android:title="@string/menu_notifications" />
...
