...
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/txtChannelCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
...
            android:fontFamily="sans-serif"
            android:gravity="start|top"
            android:hint="@string/hintChannelCode"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnJoinNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_1"
            android:textColor="@color/color_white"
            android:layout_marginBottom="20dp"
            android:text="@string/btnJoinChannel" />
...
